# eass_a_workouttracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  exercises.md  pyproject.toml  requirements.txt  service-contract.md  test_api.sh  test_flows.sh
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-review.yml  deploy.yml  release.yml
app/: main.py  models.py  repository.py
cli/: workout_cli.py
cli/tests/: test_workout_cli.py
docs/: DEPLOYMENT_GUIDE.md  EX3-notes.md  release-checklist.md  service-contract.md
docs/architecture/: service-communication.md  shared-library.md
docs/runbooks/: compose.md
ex_grades/: ex1_grade.md
scripts/: api.http  cli.py  demo.sh  exercises_mcp.py  mcp_probe.py  seed.py  test_cli.py
services/: __init__.py
services/ai_coach/: Dockerfile  __init__.py  pyproject.toml
services/ai_coach/src/: __init__.py  agent.py  api.py  config.py  models.py  workout_client.py
services/ai_coach/tests/: __init__.py  test_ai_coach.py
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 2cf86d906028_initial_migration.py  a1b2c3d4e5f6_add_users_table_and_user_id_fk.py  b3c4d5e6f7a8_add_email_password_auth.py
services/api/scripts/: cli.py
services/api/src/: __init__.py  api.py  auth.py  etag.py  manage.py
services/api/src/database/: __init__.py  config.py  database.py  db_models.py  dependencies.py  models.py  repository.py  sqlmodel_repository.py  user_repository.py
services/api/src/ratelimit/: __init__.py  config.py
services/api/tests/: test_api.py  test_auth.py  test_config.py  test_ratelimit.py  test_schemathesis.py
services/frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
services/frontend/src/: App.css  App.tsx  dashboard.py  index.css  test-setup.ts
services/frontend/src/api/: client.ts
services/frontend/src/components/: AICoachChat.tsx  ApiKeySettings.tsx  BottomTabs.tsx  CreateExerciseForm.tsx  EditExerciseModal.tsx  ExerciseList.tsx  Layout.tsx  LoadingSpinner.tsx  LoginPage.tsx  Metrics.tsx  Sidebar.tsx  index.ts
services/frontend/src/components/auth/: LoginPage.tsx
services/frontend/src/components/coach/: AnalysisReport.test.tsx  AnalysisReport.tsx  ChatBubble.tsx  ChatMessage.tsx  ChatView.test.tsx  ChatView.tsx  CoachChat.tsx  CoachLanding.tsx  RecommendationPanel.tsx  WorkoutGenerator.test.tsx  WorkoutGenerator.tsx
services/frontend/src/components/dashboard/: DashboardHeader.tsx  ExerciseCard.tsx  ExerciseList.tsx  MetricsGrid.tsx  VolumeChart.tsx  WorkoutDayTabs.tsx  WorkoutDistribution.tsx
services/frontend/src/components/exercises/: CreateExerciseModal.tsx  EditExerciseModal.tsx
services/frontend/src/components/layout/: BottomNav.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
services/frontend/src/components/nav/: BottomNav.tsx  TopBar.tsx
services/frontend/src/components/settings/: AccountSection.tsx  ApiKeyCard.tsx  ApiKeySection.tsx  BodyweightSection.tsx  DangerZone.tsx  ProfileCard.tsx  ProfileSection.tsx
services/frontend/src/components/stats/: SplitDistribution.tsx  StatsRow.tsx  VolumeChart.tsx
services/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  GlowButton.tsx  IconButton.tsx  Modal.tsx  PageShell.tsx  PageTransition.tsx  ProgressRing.tsx  Skeleton.tsx  StatCard.tsx
services/frontend/src/components/workout/: CreateSheet.tsx  DayPills.tsx  EmptyState.tsx  ExerciseEditor.tsx  ExerciseRow.tsx  SplitCard.tsx
services/frontend/src/contexts/: AuthContext.tsx
services/frontend/src/hooks/: useAdmin.ts  useBodyweight.ts  useExercises.ts  useSessionStorage.test.ts  useSessionStorage.ts
services/frontend/src/lib/: constants.ts  motion.ts
services/frontend/src/pages/: AdminPage.tsx  CoachPage.tsx  DashboardPage.tsx  SettingsPage.tsx
services/frontend/src/types/: admin.ts  aiCoach.ts  exercise.ts
services/frontend/src/utils/: emailValidation.ts
services/frontend/tests/: test_client.py
services/shared/clients/: base_client.py
services/shared/config/: base_settings.py
services/shared/models/: __init__.py  exercise.py
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/src/: clients.py  health.py  worker.py
services/worker/src/tasks/: cache_warmup.py  cleanup.py  refresh.py
services/worker/tests/: test_config.py  test_tasks_cache_warmup.py  test_tasks_cleanup.py  test_tasks_refresh.py  test_worker.py
tests/: test_api.py  test_config.py
