[project]
name = "workout-tracker"
version = "0.1.0"
description = "A simple workout tracker app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.40.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pandas-stubs~=2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

