[project]
name = "grindlogger"
version = "0.1.0"
description = "A workout tracking and fitness logging app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pandas-stubs~=2.3.3",
    "redis>=5.0.0",
    "pyjwt>=2.8.0",
    "slowapi>=0.1.9",
    "arq>=0.25.0",
    "logfire>=0.41.0",
    "mcp[cli]>=1.1.0",
    "google-auth>=2.29.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-anyio>=0.0.0",
    "anyio>=4.0.0",
    "schemathesis>=4.9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-anyio>=0.0.0",
    "anyio>=4.0.0",
    "schemathesis>=4.9.5",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "redis: marks tests that require Redis",
]
testpaths = ["services/api/tests", "services/ai_coach/tests", "services/worker/tests"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv"]
skips = ["B101"]  # Skip assert warnings in tests

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "C4"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true

