[project]
name = "workout-ai-coach"
version = "0.1.0"
description = "AI-powered Workout Coach Service using Pydantic AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai>=0.0.24",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-anyio>=0.0.0",
]

